# swagger.json
@@ -312,6 +312,11 @@
                 "description": "User's email",
                 "format": "email",
                 "example": "john.doe123@example.com"
+              },
+              "avatarURL": {
+                "type": "string",
+                "description": "User's default avatar url",
+                "example": "http://res.cloudinary.com/ddbqgch8e/image/upload/v1713198540/avatars/azjfryjytat5cpdh9ix5.webp"
               }
             }
           }
@@ -320,7 +325,8 @@
           "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY2MWQxNDM3ODY3OTRmMjE4YjQ1MjdkYSIsImlhdCI6MTcxMzE4NTA1MCwiZXhwIjoxNzEzMjY3ODUwfQ.9cXV9QuhscFv9DKRjbzSkJLuAYgJyGV1CRD8uOPr5Fc",
           "user": {
             "username": "john.doe123",
-            "email": "john.doe123@example.com"
+            "email": "john.doe123@example.com",
+            "avatarURL": "http://res.cloudinary.com/ddbqgch8e/image/upload/v1713198540/avatars/azjfryjytat5cpdh9ix5.webp"
           }
         }
       },
